Pull up the following revisions(s) (requested by dholland in ticket #1371): 	sys/sys/stat.h:	revision 1.59

Parenthesize S_IS*() macro arguments to prevent breakage with certain
arguments. Addresses PR/41919.